EX3 schéma + tables du Data Warehouse est fini