@@ -11,5 +11,14 @@ lazy val root = (project in file("."))
       "com.amazonaws"     %  "aws-java-sdk-bundle" % "1.12.262",
       // Ajout pour l'exercice 2 (Branche 2 - Postgres)
       "org.postgresql"    %  "postgresql" % "42.7.2"
+    ),
+
+    // Java 17 + Spark: make sure JVM options are actually applied
+    run / fork := true,
+    run / javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-exports=java.base/sun.util.calendar=ALL-UNNAMED"
     )
   )
